--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/167/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /167
-title: "React Hebdo #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, date-fns..."
+title: "React Hebdo #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, :has(), date-fns..."
 authors: [slorber]
 date: 12-19-2023
 ---
