--- a/website/newsletter/167/index.mdx
+++ b/website/newsletter/167/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /167
-title: "This Week In React #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, Tailwind, date-fns..."
+title: "This Week In React #167: Aria Components, Hydration, Remix, Server Components, useSyncExternalStore, cache, perf, Glow, Unistyles, Expo, :has(), Tailwind, date-fns..."
 authors: [slorber]
 date: 12-19-2023
 ---
