--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -8,7 +8,11 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+ShipFast https://shipfast.getrewardful.co
+
+RN Survey
+
+2023 review
 
 <!-- truncate -->
 
@@ -30,9 +34,50 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+Headline:
+
+📦 Tanstack Router 1.0 release - 🐦 [Tweet](https://twitter.com/tannerlinsley/status/1738709130213560497)
+
+---
 
 - 💸 [From Dreamweaver to JSX: The Evolution of Visual Dev Tools for the Web](https://mightymeld.com/blog/browser-dev-tools-understand-code?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=link1)
+- 👀 [React Docs PR - React-DOM static resource loading functions](https://github.com/reactjs/react.dev/pull/6459)
+- 👀 [Next.js PR - Next.js is exploring moving to Lightning CSS](https://github.com/vercel/next.js/pull/58712) 🐦 [Tweet](https://twitter.com/leeerob/status/1740124461683409042)
+- 👀 [Remix PR - SPA Mode](https://github.com/remix-run/remix/pull/8338): Will add the long-awaited possibility to generate Single Page Applications with Remix.
+- 👀 [Million.js joins Y Combinator](https://twitter.com/aidenybai/status/1737929698221682789): Their mission is “Make React Faster”.
+- 🐦 [useMemo to become a better version of context selectors](https://twitter.com/sebastienlorber/status/1741218919732429108): We all want to optimize our apps with context selectors for a while, but it turns out [selectors do not compose well](https://twitter.com/dan_abramov2/status/1741200483862151663), and the plan is to improve useMemo to kind of act like a selector!
+- 🐦 [React.postpone() experimental API](https://twitter.com/sebastienlorber/status/1741180119975182770)
+- 🐦 [SkipRenderOnClient - interesting trick to optimize hydration performance](https://twitter.com/sebastienlorber/status/1742528219318738955)
+- 📜 [How to make Storybook 2-4x faster - v7.6 comes with perf improvement options, enabled by default in v8.0](https://storybook.js.org/blog/optimize-storybook-7-6/)
+- 📜 [Future of Storybook in 2024](https://storybook.js.org/blog/future-of-storybook-2024/): The themes for Storybook in 2024 will be application development (as opposed to isolated component development), enhanced support for non-React frameworks, and improved story generation (using AI).
+- 📜 [MDX routes in Remix using Vite](https://remix-blog-mdx.fly.dev/): New approach to handle MDX at build-time using the new Vite support in Remix.
+- 📜 [React Server Components: the Good, the Bad, and the Ugly](https://www.mayank.co/blog/react-server-components/): Critical, but well-informed take on the status quo of RSC.
+- 📜 [Thoughts on Remix](https://www.viget.com/articles/thoughts-on-remix/): Balanced view on Remix - where it came from, their philosophy and how it compares to Next.js.
+- 📜 [More Than You Need to Know About ReactDOM.­flushSync](https://julesblom.com/writing/flushsync): Detailed look at reac-dom’s flushSync method, a rarely used but sometimes crucial method to flush any updates inside a provided callback synchronously.
+- 📜 [Next.js 14 Parallel Routes](https://www.builder.io/blog/nextjs-14-parallel-routes): Article explaining how to use parallel routes in Next.js to simultaneously render multiple pages within the same layout, as for example commonly required for dashboards.
+- 📜 [Next.js 14 Intercepting Routes](https://www.builder.io/blog/nextjs-14-intercepting-routes): Introduction to “intercepting routes” in Next.js, which are most commonly used for login modals which should correctly be reflected in URL state.
+- 📜 [React with Vite and TypeScript and its common challenges](https://wanago.io/2023/12/25/react-vite-typescript/)
+- 📜 [What should we ship?](https://rauno.me/craft/vercel): Detailed blog post about the vercel.com relaunch.
+- 📜 [Apollo Client 3.9 Feature Spotlight – The memory story](https://www.apollographql.com/blog/apollo-3-9-beta-feature-spotlight-the-memory-story)
+- 📜 [Developing Gatsby: Enhancing stability and reliability](https://www.netlify.com/blog/developing-gatsby-enhancing-stability-and-reliability/)
+- 📜 [The View Transition API: A New Way to Animate Page Transitions](https://marmelab.com/blog/2023/12/21/view-transitions.html)
+- 📜 [Understanding React’s useFormState and useFormStatus Hooks](https://blog.logrocket.com/understanding-react-useformstate-useformstatus-hooks/): Currently, handling forms in React is mostly done with heavy manual lifting (think lots of useState hooks) or by leaning on a form library (like react-hook-form or Formik). Recent canary releases of React include two new hooks as kind of a middle ground between those existing approaches.
+- 📜 [Diving into Server Actions in Next.js 14](https://blog.logrocket.com/diving-into-server-actions-next-js-14/): If you’re new to React Server Components/Next.js Server Actions, this is a good introductory article to catch up on what they’re all about.
+- 📦 [shadcn-ui 0.5](https://github.com/shadcn-ui/ui/releases/tag/shadcn-ui%400.5.0): Adds a bunch of new components like Drawer, Carousel, and Pagination. 🐦 [Tweet](https://twitter.com/shadcn/status/1738283281424982488)
+- [https://ui.shadcn.com/docs/changelog](https://ui.shadcn.com/docs/changelog)
+- 📦 [rsc-cache - cache expensive RSCs, with Next.js integration](https://github.com/fredkiss3/rsc-cache)
+- 📦 [TanStack Store - Framework agnostic, type-safe store with reactive framework adapters](https://tanstack.com/store/latest)
+- 📦 [TanStack Config - Tool for publishing and maintaining high-quality JavaScript packages](https://github.com/TanStack/config)
+- 📦 [Catalyst - Modern UI kit for React](https://tailwindcss.com/blog/introducing-catalyst): Tailwind UI, the paid component and template library from the makers of Tailwind CSS added a new UI kit.
+- 📦 [Tokenami Atomic CSS in the style attribute](https://github.com/tokenami/tokenami): 2023 was the year of the styling libraries, and here is yet another one, which looks very well thought-out. Type-safe static styles with theming, responsive variant support, and no bundler integration.
+- 📦 [StyleX 0.4.1](https://stylexjs.com/blog/v0.4.1): Meta’s StyleX keeps evolving, recently improved the ESLint and Rollup plugins, added auto-complete and performance and code-size improvements.
+- 📦 [Storybook 8.0.0 alpha 4 - no react peer dependency anymore](https://github.com/storybookjs/storybook/releases/tag/v8.0.0-alpha.4)
+- 📦 [TWC](https://react-twc.vercel.app/): library to create reusable Tailwind components for React
+- 📦 [MDXTS](https://www.mdxts.dev/): Interesting approach to automatically render prose content, type documentation, and examples from MDX and TypeScript files (e.g. to generate documentation for React components). 🐦 [Tweet](https://twitter.com/souporserious/status/1738878942260699231)
+- 📦 [Plate - Rich-text editor framework for React, customizable, including a plugin system](https://platejs.org/)
+- 📦 [Holy-loader - Progress-bar for React and Next.js](https://github.com/tomcru/holy-loader)
+- 📦 [next-route-handler-pipe - Function pipelines for Next.js route handlers](https://github.com/KolbySisk/next-route-handler-pipe)
+- 📦 [puck 0.13 - Visual editor for React](https://github.com/measuredco/puck)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -46,19 +91,52 @@ import Support from "../_support.mdx";
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 📊 [State of React Native 2023 survey - Last-call, closing on Friday 5](https://stateofreactnative.com/)
+- 👀 [RFC: Moving away from Obj-C on Apple platforms](https://github.com/react-native-community/discussions-and-proposals/pull/747): Implementation will only start after the move to the New Architecture has been completed.
+- 👀 [hermes-jsi-demos - Use Hermes with JSI on desktop without any frameworks](https://github.com/tmikov/hermes-jsi-demos)
+- 👀 [jsi-rs - Write ultra fast React Native modules in Rust](https://github.com/laptou/jsi-rs/)
+- 🐦 [Expo SDK 50 optimizing bundle size with platform shaking](https://x.com/Baconbrix/status/1740487401414275120)
+- 🐦 [Chain React 2024 announced for July 17-19](https://x.com/ChainReactConf/status/1737578373415928100)
+- 🐦 [Top React Native Tweets of 2023](https://x.com/infinite_red/status/1737890233201623526)
+- 📜 [WishList Release scrapped](https://margelo.notion.site/WishList-Summit-b20c24d1f0da4889a0513dfa929be5ed): After a year of development, Margelo decided not to release their library aimed at solving performance problems for lists in React Native (🐦 [Tweet](https://x.com/margelo_io/status/1737808611101888601))
+- 📜 [How to Properly Read Xcode Error](https://levelup.gitconnected.com/how-to-properly-read-xcode-error-7b979692333d)
+- 📜 [JavaScript Achieves Breakthrough Performance with Static Hermes](https://medium.com/@elves.silva.vieira/javascript-achieves-breakthrough-performance-with-static-hermes-6286b0ac8ef7)
+- 📜 [Bringing React Native libraries to Apple Vision Pro](https://www.oskarkwasniewski.dev/blog/bringing-react-native-libraries-to-apple-vision-pro)
+- 📦 [react-native-release-profiler - passively profile JS/Hermes in production and release builds](https://github.com/margelo/react-native-release-profiler)
+- 📦 [expo-video-metadata](https://github.com/hirbod/expo-video-metadata): Retrieve information such as duration, dimensions, orientation, and codec for local and remote video files.
+- 📦 [react-native-macos 0.73.1](https://www.npmjs.com/package/react-native-macos/v/0.73.1)
+- 📦 [react-native-windows 0.73.2](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.2)
+- 📦 [Bootstrap a universal File-based Expo app with Tailwind styles](https://github.com/expo/examples/tree/master/with-router-tailwind): New create-expo-app template using Expo Router v3 and NativeWind v4.
+- 🎙️ [RNR 284 - React Native Rewind - 2023 in Review](https://reactnativeradio.com/episodes/rnr-284-react-native-rewind-2023-in-review)
+- 🎙️ [Rocket Ship 23 - Why you should use React Native in 2024](https://podcast.galaxies.dev/episodes/023-why-you-should-use-react-native-in-2024)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [TypeScript 5.4 PR - Add auto-import for the package.json imports field](https://github.com/microsoft/TypeScript/pull/55015)
+- 📜 [Frontend predictions for 2024](https://buttondown.email/whatever_jamie/archive/frontend-predictions-for-2024/)
+- 📜 [JavaScript Frameworks - Heading into 2024](https://dev.to/this-is-learning/javascript-frameworks-heading-into-2024-i3l)
+- 📜 [Alternate Futures for “Web Components”](https://blog.carlana.net/post/2023/web-component-alternative-futures/)
+- 📜 [Why JavaScript promises aren't technically monads](https://rybicki.io/blog/2023/12/23/promises-arent-monads.html)
+- 📜 [Shadow DOM and the problem of encapsulation](https://nolanlawson.com/2023/12/30/shadow-dom-and-the-problem-of-encapsulation/)
+- 📜 [Modern CSS for 2024: Nesting, Layers, and Container Queries](https://www.builder.io/blog/css-2024-nesting-layers-container-queries)
+- 📦 [ESLint v9.0.0-alpha.0](https://eslint.org/blog/2023/12/eslint-v9.0.0-alpha.0-released/)
+- 📦 [quick-lint-js. 3.0 - TypeScript bug finder](https://quick-lint-js.com/blog/version-3.0/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://x.com/sebastienlorber/status/1737380479383277636?s=20
+https://x.com/trashh_dev/status/1737851312962994611?s=20
+https://x.com/wesbos/status/1737985901861495003?s=20
+https://x.com/AdamRackis/status/1738997470649065703?s=20
+https://x.com/trashh_dev/status/1740040036224282942?s=20
+https://x.com/supabase/status/1740650139100778625?s=20
+https://twitter.com/ryanflorence/status/1737566755583848470
+https://twitter.com/webdevcody/status/1737138310605083051
+https://twitter.com/RyanEls4/status/1742107920047780292
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
