--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -101,12 +101,13 @@ Headline:
 - 📜 [WishList Release scrapped](https://margelo.notion.site/WishList-Summit-b20c24d1f0da4889a0513dfa929be5ed): After a year of development, Margelo decided not to release their library aimed at solving performance problems for lists in React Native (🐦 [Tweet](https://x.com/margelo_io/status/1737808611101888601))
 - 📜 [How to Properly Read Xcode Error](https://levelup.gitconnected.com/how-to-properly-read-xcode-error-7b979692333d)
 - 📜 [JavaScript Achieves Breakthrough Performance with Static Hermes](https://medium.com/@elves.silva.vieira/javascript-achieves-breakthrough-performance-with-static-hermes-6286b0ac8ef7)
-- 📜 [Bringing React Native libraries to Apple Vision Pro](https://www.oskarkwasniewski.dev/blog/bringing-react-native-libraries-to-apple-vision-pro)
+- 📜 [Bringing React Native libraries to Apple Vision Pro](https://www.oskarkwasniewski.dev/blog/bringing-react-native-libraries-to-apple-vision-pro): the new out-of-tree VisionOS platform will support JS libs automatically, and most native libs will simply need to add a `visionos` platform to the podspec.
 - 📦 [react-native-release-profiler - passively profile JS/Hermes in production and release builds](https://github.com/margelo/react-native-release-profiler)
 - 📦 [expo-video-metadata](https://github.com/hirbod/expo-video-metadata): Retrieve information such as duration, dimensions, orientation, and codec for local and remote video files.
 - 📦 [react-native-macos 0.73.1](https://www.npmjs.com/package/react-native-macos/v/0.73.1)
 - 📦 [react-native-windows 0.73.2](https://github.com/microsoft/react-native-windows/releases/tag/react-native-windows_v0.73.2)
 - 📦 [Bootstrap a universal File-based Expo app with Tailwind styles](https://github.com/expo/examples/tree/master/with-router-tailwind): New create-expo-app template using Expo Router v3 and NativeWind v4.
+- 🎙 [React Native Show 32 - React Native for Apple Vision Pro and visionOS](https://www.callstack.com/podcasts/react-native-for-apple-vision-pro-and-visionos)
 - 🎙️ [RNR 284 - React Native Rewind - 2023 in Review](https://reactnativeradio.com/episodes/rnr-284-react-native-rewind-2023-in-review)
 - 🎙️ [Rocket Ship 23 - Why you should use React Native in 2024](https://podcast.galaxies.dev/episodes/023-why-you-should-use-react-native-in-2024)
 
