--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -8,8 +8,6 @@ unlisted: true
 
 Hi everyone!
 
-ShipFast https://shipfast.getrewardful.co
-
 RN Survey
 
 2023 review
@@ -28,7 +26,11 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![A newsletter helping flex your product muscle](/emails/issues/168/posthog.png)](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir)
+
+**[A newsletter helping flex your product muscle](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir)**
+
+[**Product for Engineers**](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir) is PostHog’s newsletter dedicated to helping engineers improve their product skills. Learn what questions to ask users, how to build new features users love, and the path to product market fit. [**Subscribe for free**](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir) to get curated advice on building great products, lessons (and mistakes) from building PostHog, and deep dives into the strategies of top startups.
 
 ---
 
@@ -85,12 +87,21 @@ Headline:
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![ShipFast - Ship your startup in days, not weeks](/emails/issues/168/shipfast.jpg)](https://shipfa.st/?via=twir)
+
+**[ShipFast - Ship your startup in days, not weeks](https://shipfa.st/?via=twir)**
+
+The NextJS boilerplate with all you need to build your SaaS, AI tool, or any other web app and make your first $ online fast.
+
+- App Router or Page Router
+- JavaScript or TypeScript
+- Money back guarantee, refundable within 7 days
 
 ---
 
 ## 📱 React-Native {#react-native}
 
+- 💸 [Galaxies.dev - Master React Native & Save 25% on PRO with code GALAXIES24](https://galaxies.dev?utm_source=thisweekinreact.com)
 - 📊 [State of React Native 2023 survey - Last-call, closing on Friday 5](https://stateofreactnative.com/)
 - 👀 [RFC: Moving away from Obj-C on Apple platforms](https://github.com/react-native-community/discussions-and-proposals/pull/747): Implementation will only start after the move to the New Architecture has been completed.
 - 👀 [hermes-jsi-demos - Use Hermes with JSI on desktop without any frameworks](https://github.com/tmikov/hermes-jsi-demos)
