--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/168/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/168/index.mdx
@@ -24,13 +24,15 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-<Todo />
+[![A newsletter helping flex your product muscle](/emails/issues/168/posthog.png)](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir)
+
+**[A newsletter helping flex your product muscle](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir)**
+
+[**Product for Engineers**](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir) is PostHog’s newsletter dedicated to helping engineers improve their product skills. Learn what questions to ask users, how to build new features users love, and the path to product market fit. [**Subscribe for free**](https://newsletter.posthog.com/?utm_source=twir&utm_campaign=twir) to get curated advice on building great products, lessons (and mistakes) from building PostHog, and deep dives into the strategies of top startups.
 
 ---
 
 ## ⚛️ React {#react}
-
-<Todo />
 
 - 💸 [From Dreamweaver to JSX: The Evolution of Visual Dev Tools for the Web](https://mightymeld.com/blog/browser-dev-tools-understand-code?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=link1)
 
@@ -40,13 +42,21 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor2}
 
-<Todo />
+[![ShipFast - Ship your startup in days, not weeks](/emails/issues/168/shipfast.jpg)](https://shipfa.st/?via=twir)
+
+**[ShipFast - Ship your startup in days, not weeks](https://shipfa.st/?via=twir)**
+
+The NextJS boilerplate with all you need to build your SaaS, AI tool, or any other web app and make your first $ online fast.
+
+- App Router or Page Router
+- JavaScript or TypeScript
+- Money back guarantee, refundable within 7 days
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [Galaxies.dev - Master React Native & Save 25% on PRO with code GALAXIES24](https://galaxies.dev?utm_source=thisweekinreact.com)
 
 ---
 
