--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 Merry Christmas and Happy New Year! 🥂
 
-The newsletter is back for another year. Despite the holiday season we still had some interesting news, notably regarding the TanStack. Developers also took this opportunity to work on their own open-source side projects 😄
+The newsletter is back for another year. Despite the holiday season we still had some interesting news, notably regarding the TanStack. Developers probably took this opportunity to work on their own open-source side projects 😄!
 
 Don't forget to answer the [State of React Native 2023 survey](https://stateofreactnative.com/), it's your last chance!
 
