--- a/website/newsletter/168/index.mdx
+++ b/website/newsletter/168/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /168
-title: "This Week In React #168: TanStack, useMemo, RSC, preload, flushSync, shadcn-ui, MDX, Storybook, StyleX, TWC, Tokenami, WishList, VisionOS, Hermes, release-profiler..."
+title: "This Week In React #168: TanStack, useMemo, RSC, preload, flushSync, shadcn-ui, MDX, Storybook, StyleX, TWC, Tokenami, Catalyst, rsc-cache, WishList, VisionOS, Hermes, release-profiler..."
 authors: [slorber]
 date: 01-03-2024
 ---
